force-app/main/default/objects/Sous_tache__c/Sous_tache__c.object-meta.xml
<CustomObject>
    <label>Sous tache</label>
    <nameField>
        <label>Sous tache Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sous taches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>