force-app/main/default/objects/Sous_tache__c/fields/Affecte__c.field-meta.xml
<CustomField>
    <fullName>Affecte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affecté à</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sous_taches</relationshipName>
    <type>Lookup</type>
</CustomField>