force-app/main/default/objects/Sous_tache__c/fields/Tache__c.field-meta.xml
<CustomField>
    <fullName>Tache__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tâche</label>
    <referenceTo>Tache__c</referenceTo>
    <relationshipLabel>Sous taches</relationshipLabel>
    <relationshipName>Sous_taches</relationshipName>
    <type>Lookup</type>
</CustomField>